// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`version basic version 1`] = `
@prisma/cli          : 2.11.0-dev.20
@prisma/client       : 2.11.0-dev.20
Current platform     : TEST_PLATFORM
Query Engine         : query-engine b96969f75cead65dcc63ca17d876eafdc8b3f64e 
Migration Engine     : migration-engine-cli b96969f75cead65dcc63ca17d876eafdc8b3f64e 
Introspection Engine : introspection-core b96969f75cead65dcc63ca17d876eafdc8b3f64e 
Format Binary        : prisma-fmt b96969f75cead65dcc63ca17d876eafdc8b3f64e 
Studio               : 0.333.0
`;

exports[`version version with custom binaries 1`] = `
@prisma/cli          : 2.11.0-dev.20
@prisma/client       : 2.11.0-dev.20
Current platform     : TEST_PLATFORM
Query Engine         : query-engine 58369335532e47bdcec77a2f1e7c1fb83a463918 
Migration Engine     : migration-engine-cli 58369335532e47bdcec77a2f1e7c1fb83a463918 
Introspection Engine : introspection-core 58369335532e47bdcec77a2f1e7c1fb83a463918 
Format Binary        : prisma-fmt 58369335532e47bdcec77a2f1e7c1fb83a463918 
Studio               : 0.333.0
`;
